# reasoning-model-from-scratch

./: .gitignore  .graphifyignore  README.md  pyproject.toml
docs/: 01_reasoning_pipeline.md  02_interview_guide.md  03_extension_roadmap.md  04_refinement_playbook.md  05_pdf_study_map.md  06_book_chapter_study_notes.md  knowledge-graph.html
examples/: sample_run.md
src/reasoning_lab/: __init__.py  cli.py  dataset.py  distill.py  evaluate.py  grpo.py  inference_scaling.py  models.py  refine.py  train_rl.py  verifiers.py
tests/: test_reasoning_lab.py
