[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-model-from-scratch"
version = "0.1.0"
description = "A small, interview-friendly project that demonstrates the reasoning model pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = []

[project.scripts]
reasoning-lab = "reasoning_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

